--- a/package.json
+++ b/package.json
@@ -12,8 +12,16 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/stack": "^6.3.3",
+    "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
     "expo": "~46.0.16",
     "expo-status-bar": "~1.4.0",
+    "express": "^4.18.2",
+    "moment": "^2.29.4",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
+    "mysqli": "^3.1.4",
+    "nodemon": "^2.0.20",
     "react": "18.0.0",
     "react-native": "0.69.6",
     "react-native-safe-area-context": "4.3.1",
