--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo": "~46.0.16",
     "expo-status-bar": "~1.4.0",
     "express": "^4.18.2",
+    "firebase": "^9.13.0",
     "moment": "^2.29.4",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
@@ -24,6 +25,7 @@
     "nodemon": "^2.0.20",
     "react": "18.0.0",
     "react-native": "0.69.6",
+    "react-native-gifted-chat": "^1.0.4",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-navigation": "^4.4.4",
