--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo": "~46.0.16",
     "expo-status-bar": "~1.4.0",
     "express": "^4.18.2",
+    "firebase": "^9.14.0",
     "moment": "^2.29.4",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
