--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
@@ -26,6 +27,7 @@
     "nodemon": "^2.0.20",
     "react": "18.0.0",
     "react-native": "0.69.6",
+    "react-native-async-storage": "^0.0.1",
     "react-native-gifted-chat": "^1.0.4",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "~3.15.0",
