--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/checkbox": "^0.5.14",
+    "@react-native-community/cli": "^9.3.2",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
@@ -26,8 +28,10 @@
     "nodemon": "^2.0.20",
     "react": "18.0.0",
     "react-native": "0.69.6",
+    "react-native-dropdown-picker": "^5.4.3",
+    "react-native-dropdown-select-list": "^2.0.2",
     "react-native-gifted-chat": "^1.0.4",
-    "react-native-safe-area-context": "^4.3.1",
+    "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4"
