--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/stack": "^6.3.3",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
+    "events": "^3.3.0",
     "expo": "~46.0.16",
     "expo-status-bar": "~1.4.0",
     "express": "^4.18.2",
@@ -26,6 +27,7 @@
     "mysql2": "^2.3.3",
     "mysqli": "^3.1.4",
     "nodemon": "^2.0.20",
+    "querystring": "^0.2.1",
     "react": "18.0.0",
     "react-native": "0.69.6",
     "react-native-async-storage": "^0.0.1",
@@ -33,7 +35,8 @@
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-navigation": "^4.4.4",
-    "react-navigation-stack": "^2.10.4"
+    "react-navigation-stack": "^2.10.4",
+    "zlib": "^1.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
