--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-community/datetimepicker": "6.2.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
@@ -31,7 +32,10 @@
     "react": "18.0.0",
     "react-native": "0.69.6",
     "react-native-async-storage": "^0.0.1",
+    "react-native-date-picker": "^4.2.6",
+    "react-native-datepicker": "^1.7.2",
     "react-native-gifted-chat": "^1.0.4",
+    "react-native-modal-datetime-picker": "^14.0.0",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-navigation": "^4.4.4",
