--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/stack": "^6.3.3",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
+    "datetimepicker": "^0.1.39",
     "events": "^3.3.0",
     "expo": "~46.0.16",
     "expo-status-bar": "~1.4.0",
