--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-datepicker": "^1.7.2",
     "react-native-gifted-chat": "^1.0.4",
     "react-native-modal-datetime-picker": "^14.0.0",
+    "react-native-paper": "^5.0.0-rc.10",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-navigation": "^4.4.4",
