--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo-status-bar": "~1.4.0",
     "express": "^4.18.2",
     "firebase": "^9.14.0",
+    "http": "^0.0.1-security",
     "moment": "^2.29.4",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
