--- a/package.json
+++ b/package.json
@@ -35,13 +35,17 @@
     "react-native-async-storage": "^0.0.1",
     "react-native-date-picker": "^4.2.6",
     "react-native-datepicker": "^1.7.2",
+    "react-native-dropdown-select-list": "^2.0.2",
     "react-native-gifted-chat": "^1.0.4",
     "react-native-modal-datetime-picker": "^14.0.0",
     "react-native-paper": "^5.0.0-rc.10",
+    "react-native-reanimated": "^2.13.0",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
+    "react-native-vector-icons": "^9.2.0",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
+    "reanimated-bottom-sheet": "^1.0.0-alpha.22",
     "zlib": "^1.0.5"
   },
   "devDependencies": {
