--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "cors": "^2.8.5",
     "datetimepicker": "^0.1.39",
     "events": "^3.3.0",
-    "expo": "~46.0.16",
+    "expo": "^44.0.6",
     "expo-status-bar": "~1.4.0",
     "express": "^4.18.2",
     "firebase": "^9.14.0",
