--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native-gifted-chat": "^1.0.4",
     "react-native-modal-datetime-picker": "^14.0.0",
     "react-native-paper": "^5.0.0-rc.10",
+    "react-native-reanimated": "^2.13.0",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-vector-icons": "^9.2.0",
