--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.17.11",
-    "@react-native-community/datetimepicker": "6.2.0",
+    "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-community/datetimepicker": "4.0.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
@@ -21,7 +21,7 @@
     "datetimepicker": "^0.1.39",
     "events": "^3.3.0",
     "expo": "^44.0.6",
-    "expo-status-bar": "~1.4.0",
+    "expo-status-bar": "~1.2.0",
     "express": "^4.18.2",
     "firebase": "^9.14.0",
     "http": "^0.0.1-security",
@@ -32,7 +32,7 @@
     "nodemon": "^2.0.20",
     "querystring": "^0.2.1",
     "react": "18.0.0",
-    "react-native": "0.69.6",
+    "react-native": "0.64.3",
     "react-native-async-storage": "^0.0.1",
     "react-native-date-picker": "^4.2.6",
     "react-native-datepicker": "^1.7.2",
@@ -40,9 +40,9 @@
     "react-native-gifted-chat": "^1.0.4",
     "react-native-modal-datetime-picker": "^14.0.0",
     "react-native-paper": "^5.0.0-rc.10",
-    "react-native-reanimated": "^2.13.0",
-    "react-native-safe-area-context": "4.3.1",
-    "react-native-screens": "~3.15.0",
+    "react-native-reanimated": "~2.3.1",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.10.1",
     "react-native-vector-icons": "^9.2.0",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
