--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-community/checkbox": "^0.5.14",
     "@react-native-community/datetimepicker": "6.5.2",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.4.0",
@@ -17,10 +18,12 @@
     "@react-navigation/native-stack": "^6.9.1",
     "@react-navigation/stack": "^6.3.3",
     "body-parser": "^1.20.1",
+    "card": "^2.5.4",
     "cors": "^2.8.5",
     "datetimepicker": "^0.1.39",
     "events": "^3.3.0",
     "expo": "^47.0.8",
+    "expo-constants": "^14.0.2",
     "expo-status-bar": "~1.4.2",
     "express": "^4.18.2",
     "firebase": "^9.14.0",
@@ -34,12 +37,14 @@
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-async-storage": "^0.0.1",
+    "react-native-card": "^1.0.0",
+    "react-native-checkbox": "^2.0.0",
     "react-native-date-picker": "^4.2.6",
     "react-native-datepicker": "^1.7.2",
     "react-native-dropdown-select-list": "^2.0.2",
     "react-native-gifted-chat": "^1.0.4",
     "react-native-modal-datetime-picker": "^14.0.0",
-    "react-native-paper": "^5.0.0-rc.10",
+    "react-native-paper": "^5.1.2",
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
