--- a/package.json
+++ b/package.json
@@ -44,10 +44,12 @@
     "react-native-dropdown-select-list": "^2.0.2",
     "react-native-gifted-chat": "^1.0.4",
     "react-native-modal-datetime-picker": "^14.0.0",
+    "react-native-pager-view": "6.0.1",
     "react-native-paper": "^5.1.2",
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
+    "react-native-tab-view": "^3.3.4",
     "react-native-vector-icons": "^9.2.0",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
