--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "cors": "^2.8.5",
     "datetimepicker": "^0.1.39",
     "events": "^3.3.0",
-    "expo": "^47.0.8",
+    "expo": "^47.0.13",
     "expo-constants": "^14.0.2",
     "expo-status-bar": "~1.4.2",
     "express": "^4.18.2",
@@ -46,7 +46,7 @@
     "react-native-modal-datetime-picker": "^14.0.0",
     "react-native-pager-view": "6.0.1",
     "react-native-paper": "^5.1.2",
-    "react-native-reanimated": "~2.9.1",
+    "react-native-reanimated": "^2.14.1",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-tab-view": "^3.3.4",
