--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "events": "^3.3.0",
     "expo": "^47.0.13",
     "expo-constants": "^14.0.2",
+    "expo-image-picker": "^14.0.2",
     "expo-status-bar": "~1.4.2",
     "express": "^4.18.2",
     "firebase": "^9.14.0",
@@ -44,7 +45,7 @@
     "react-native-dropdown-select-list": "^2.0.2",
     "react-native-gifted-chat": "^1.0.4",
     "react-native-modal-datetime-picker": "^14.0.0",
-    "react-native-pager-view": "6.0.1",
+    "react-native-pager-view": "^6.0.1",
     "react-native-paper": "^5.1.2",
     "react-native-reanimated": "^2.14.1",
     "react-native-safe-area-context": "4.4.1",
