--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@react-native-community/datetimepicker": "6.5.2",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.4.0",
-    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.1",
     "@react-navigation/stack": "^6.3.3",
     "body-parser": "^1.20.1",
@@ -23,11 +23,12 @@
     "datetimepicker": "^0.1.39",
     "events": "^3.3.0",
     "expo": "^47.0.13",
+    "expo-cli": "^4.3.0",
     "expo-constants": "^14.0.2",
     "expo-image-picker": "^14.0.2",
     "expo-status-bar": "~1.4.2",
     "express": "^4.18.2",
-    "firebase": "^9.14.0",
+    "firebase": "^9.16.0",
     "http": "^0.0.1-security",
     "moment": "^2.29.4",
     "mysql": "^2.18.1",
@@ -42,11 +43,11 @@
     "react-native-checkbox": "^2.0.0",
     "react-native-date-picker": "^4.2.6",
     "react-native-datepicker": "^1.7.2",
-    "react-native-dropdown-select-list": "^2.0.2",
-    "react-native-gifted-chat": "^1.0.4",
-    "react-native-modal-datetime-picker": "^14.0.0",
+    "react-native-dropdown-select-list": "^2.0.4",
+    "react-native-gifted-chat": "^1.1.1",
+    "react-native-modal-datetime-picker": "^14.0.1",
     "react-native-pager-view": "^6.0.1",
-    "react-native-paper": "^5.1.2",
+    "react-native-paper": "^5.1.4",
     "react-native-reanimated": "^2.14.1",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
