--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo": "^47.0.13",
     "expo-cli": "^4.3.0",
     "expo-constants": "^14.0.2",
+    "expo-image-picker": "^14.0.2",
     "expo-status-bar": "~1.4.2",
     "express": "^4.18.2",
     "firebase": "^9.16.0",
@@ -36,7 +37,7 @@
     "nodemon": "^2.0.20",
     "querystring": "^0.2.1",
     "react": "18.1.0",
-    "react-native": "0.70.5",
+    "react-native": "^0.70.5",
     "react-native-async-storage": "^0.0.1",
     "react-native-card": "^1.0.0",
     "react-native-checkbox": "^2.0.0",
