--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
     "cors": "^2.8.5",
     "datetimepicker": "^0.1.39",
     "events": "^3.3.0",
-    "expo": "^47.0.13",
+    "expo": "^47.0.0",
     "expo-cli": "^4.3.0",
-    "expo-constants": "^14.0.2",
+    "expo-constants": "~14.0.2",
+    "expo-image-picker": "~14.0.2",
     "expo-status-bar": "~1.4.2",
     "express": "^4.18.2",
     "firebase": "^9.16.0",
@@ -47,7 +48,7 @@
     "react-native-modal-datetime-picker": "^14.0.0",
     "react-native-pager-view": "6.0.1",
     "react-native-paper": "^5.1.2",
-    "react-native-reanimated": "^2.14.1",
+    "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-tab-view": "^3.3.4",
@@ -58,7 +59,7 @@
     "zlib": "^1.0.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.19.3"
   },
   "private": true
 }
