--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
     "reanimated-bottom-sheet": "^1.0.0-alpha.22",
+    "uuid": "^9.0.0",
     "zlib": "^1.0.5"
   },
   "devDependencies": {
