--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-native-datepicker": "^1.7.2",
     "react-native-dropdown-select-list": "^2.0.2",
     "react-native-gifted-chat": "^1.0.4",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-modal-datetime-picker": "^14.0.0",
     "react-native-pager-view": "6.0.1",
     "react-native-paper": "^5.1.2",
