--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "cors": "^2.8.5",
     "datetimepicker": "^0.1.39",
     "events": "^3.3.0",
-    "expo": "^47.0.0",
+    "expo": "^47.0.13",
     "expo-cli": "^4.3.0",
     "expo-constants": "~14.0.2",
     "expo-image-picker": "~14.0.2",
@@ -44,6 +44,8 @@
     "react-native-date-picker": "^4.2.6",
     "react-native-datepicker": "^1.7.2",
     "react-native-dropdown-select-list": "^2.0.2",
+    "react-native-geolocation-service": "^5.3.1",
+    "react-native-gesture-handler": "~2.8.0",
     "react-native-gifted-chat": "^1.0.4",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-modal-datetime-picker": "^14.0.0",
