--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-native-gesture-handler": "~2.8.0",
     "react-native-gifted-chat": "^1.0.4",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-linear-gradient": "^2.6.2",
     "react-native-modal-datetime-picker": "^14.0.0",
     "react-native-pager-view": "6.0.1",
     "react-native-paper": "^5.1.2",
