--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/checkbox": "^0.5.14",
     "@react-native-community/datetimepicker": "6.5.2",
+    "@react-native-community/geolocation": "^3.0.5",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.1.2",
@@ -26,6 +27,7 @@
     "expo-cli": "^4.3.0",
     "expo-constants": "~14.0.2",
     "expo-image-picker": "~14.0.2",
+    "expo-location": "~15.0.1",
     "expo-status-bar": "~1.4.2",
     "express": "^4.18.2",
     "firebase": "^9.16.0",
@@ -52,6 +54,7 @@
     "react-native-modal-datetime-picker": "^14.0.0",
     "react-native-pager-view": "6.0.1",
     "react-native-paper": "^5.1.2",
+    "react-native-permissions": "^3.7.2",
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
