--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react": "18.1.0",
     "react-native": "^0.70.5",
     "react-native-async-storage": "^0.0.1",
+    "react-native-calendar-picker": "^7.1.3",
     "react-native-card": "^1.0.0",
     "react-native-checkbox": "^2.0.0",
     "react-native-date-picker": "^4.2.6",
@@ -52,6 +53,7 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-modal-datetime-picker": "^14.0.0",
+    "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-pager-view": "6.0.1",
     "react-native-paper": "^5.1.2",
     "react-native-permissions": "^3.7.2",
