--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-native-vector-icons": "^9.2.0",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
+    "react-password-checklist": "^1.4.3",
     "reanimated-bottom-sheet": "^1.0.0-alpha.22",
     "uuid": "^9.0.0",
     "zlib": "^1.0.5"
