Nearby Jobs working

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "expo-status-bar": "~1.4.2",
     "express": "^4.18.2",
     "firebase": "^9.16.0",
+    "geolib": "^3.3.3",
     "http": "^0.0.1-security",
     "moment": "^2.29.4",
     "mysql": "^2.18.1",
