homescreen with filter

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-community/datetimepicker": "6.5.2",
     "@react-native-community/geolocation": "^3.0.5",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-picker/picker": "^2.4.8",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.1",
@@ -33,6 +34,7 @@
     "firebase": "^9.16.0",
     "geolib": "^3.3.3",
     "http": "^0.0.1-security",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
@@ -47,6 +49,7 @@
     "react-native-checkbox": "^2.0.0",
     "react-native-date-picker": "^4.2.6",
     "react-native-datepicker": "^1.7.2",
+    "react-native-dropdown-picker": "^5.4.4",
     "react-native-dropdown-select-list": "^2.0.2",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "~2.8.0",
@@ -54,6 +57,7 @@
     "react-native-google-places-autocomplete": "^2.5.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-linear-gradient": "^2.6.2",
+    "react-native-material-dropdown": "^0.11.1",
     "react-native-modal-datetime-picker": "^14.0.0",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-pager-view": "6.0.1",
