--- a/package.json
+++ b/package.json
@@ -77,7 +77,9 @@
     "zlib": "^1.0.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.3"
+    "@babel/core": "^7.19.3",
+    "detox": "^20.5.0",
+    "jest": "^29.5.0"
   },
   "private": true
 }
