--- a/package.json
+++ b/package.json
@@ -6,12 +6,7 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web",
-    "test": "jest"
-  },
-  "jest": {
-    "preset": "react-native",
-    "setupFiles": ["./jestSetUpFile"]
+    "web": "expo start --web"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "~1.17.3",
@@ -46,7 +41,7 @@
     "mysqli": "^3.1.4",
     "nodemon": "^2.0.20",
     "querystring": "^0.2.1",
-    "react": "^18.1.0",
+    "react": "18.1.0",
     "react-native": "^0.70.5",
     "react-native-async-storage": "^0.0.1",
     "react-native-calendar-picker": "^7.1.3",
@@ -84,8 +79,7 @@
   "devDependencies": {
     "@babel/core": "^7.19.3",
     "detox": "^20.5.0",
-    "jest": "^29.5.0",
-    "react-test-renderer": "^18.2.0"
+    "jest": "^29.5.0"
   },
   "private": true
 }
