--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "nodemon": "^2.0.20",
     "querystring": "^0.2.1",
     "react": "18.1.0",
+    "react-dom": "18.0.0",
     "react-native": "^0.70.5",
     "react-native-async-storage": "^0.0.1",
     "react-native-calendar-picker": "^7.1.3",
@@ -68,6 +69,7 @@
     "react-native-screens": "~3.18.0",
     "react-native-tab-view": "^3.3.4",
     "react-native-vector-icons": "^9.2.0",
+    "react-native-web": "^0.18.12",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
     "react-password-checklist": "^1.4.3",
@@ -82,6 +84,7 @@
     "@testing-library/jest-native": "^5.4.2",
     "@testing-library/react-native": "^11.5.4",
     "@types/jest": "^29.4.0",
+    "cypress": "^12.7.0",
     "detox": "^20.5.0",
     "jest": "^29.5.0"
   },
