--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "cors": "^2.8.5",
     "datetimepicker": "^0.1.39",
     "events": "^3.3.0",
-    "expo": "^47.0.13",
+    "expo": "^1.0.0",
     "expo-cli": "^4.3.0",
     "expo-constants": "~14.0.2",
     "expo-image-picker": "~14.0.2",
@@ -42,10 +42,10 @@
     "nodemon": "^2.0.20",
     "querystring": "^0.2.1",
     "react": "18.1.0",
-    "react-dom": "18.0.0",
+    "react-dom": "18.1.0",
     "react-native": "^0.70.5",
     "react-native-async-storage": "^0.0.1",
-    "react-native-calendar-picker": "^7.1.3",
+    "react-native-calendar-picker": "^6.1.5",
     "react-native-card": "^1.0.0",
     "react-native-checkbox": "^2.0.0",
     "react-native-date-picker": "^4.2.6",
@@ -86,7 +86,8 @@
     "@types/jest": "^29.4.0",
     "cypress": "^12.7.0",
     "detox": "^20.5.0",
-    "jest": "^29.5.0"
+    "jest": "^29.5.0",
+    "ts-jest": "^29.0.5"
   },
   "jest": {
     "preset": "react-native",
