--- a/package.json
+++ b/package.json
@@ -11,27 +11,28 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/checkbox": "^0.5.14",
-    "@react-native-community/datetimepicker": "6.5.2",
+    "@react-native-community/datetimepicker": "6.7.3",
     "@react-native-community/geolocation": "^3.0.5",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-picker/picker": "^2.4.8",
     "@react-navigation/bottom-tabs": "^6.4.0",
-    "@react-navigation/native": "^6.1.2",
+    "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.1",
     "@react-navigation/stack": "^6.3.3",
+    "axios": "^1.3.4",
     "body-parser": "^1.20.1",
     "card": "^2.5.4",
     "cors": "^2.8.5",
     "datetimepicker": "^0.1.39",
     "events": "^3.3.0",
-    "expo": "^1.0.0",
+    "expo": "^48.0.6",
     "expo-cli": "^4.3.0",
-    "expo-constants": "~14.0.2",
-    "expo-image-picker": "~14.0.2",
-    "expo-location": "~15.0.1",
-    "expo-status-bar": "~1.4.2",
+    "expo-constants": "~14.2.1",
+    "expo-image-picker": "~14.1.1",
+    "expo-location": "~15.1.1",
+    "expo-status-bar": "~1.4.4",
     "express": "^4.18.2",
-    "firebase": "^9.16.0",
+    "firebase": "^9.17.2",
     "geolib": "^3.3.3",
     "http": "^0.0.1-security",
     "lodash": "^4.17.21",
@@ -41,9 +42,9 @@
     "mysqli": "^3.1.4",
     "nodemon": "^2.0.20",
     "querystring": "^0.2.1",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "react-native": "^0.70.5",
+    "react": "^18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "^0.71.3",
     "react-native-async-storage": "^0.0.1",
     "react-native-calendar-picker": "^6.1.5",
     "react-native-card": "^1.0.0",
@@ -51,29 +52,28 @@
     "react-native-date-picker": "^4.2.6",
     "react-native-datepicker": "^1.7.2",
     "react-native-dropdown-picker": "^5.4.4",
-    "react-native-dropdown-select-list": "^2.0.2",
+    "react-native-dropdown-select-list": "^2.0.4",
     "react-native-geolocation-service": "^5.3.1",
-    "react-native-gesture-handler": "~2.8.0",
-    "react-native-gifted-chat": "^1.0.4",
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-gifted-chat": "^1.1.1",
     "react-native-google-places-autocomplete": "^2.5.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-material-dropdown": "^0.11.1",
     "react-native-modal-datetime-picker": "^14.0.0",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
-    "react-native-pager-view": "6.0.1",
-    "react-native-paper": "^5.1.2",
+    "react-native-pager-view": "6.1.2",
+    "react-native-paper": "^5.4.0",
     "react-native-permissions": "^3.7.2",
-    "react-native-reanimated": "~2.12.0",
-    "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "~3.18.0",
-    "react-native-tab-view": "^3.3.4",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
+    "react-native-tab-view": "^3.5.1",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "^0.18.12",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
     "react-password-checklist": "^1.4.3",
-    "react-test-renderer": "^18.2.0",
     "reanimated-bottom-sheet": "^1.0.0-alpha.22",
     "smartystreets-javascript-sdk": "^2.1.1",
     "uuid": "^9.0.0",
