fixed addresses on sign up

--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/checkbox": "^0.5.14",
     "@react-native-community/datetimepicker": "6.7.3",
     "@react-native-community/geolocation": "^3.0.5",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-picker/picker": "^2.4.8",
+    "@react-native-picker/picker": "2.4.8",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.1",
@@ -42,9 +42,9 @@
     "mysqli": "^3.1.4",
     "nodemon": "^2.0.20",
     "querystring": "^0.2.1",
-    "react": "^18.2.0",
+    "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "^0.71.3",
+    "react-native": "0.71.3",
     "react-native-async-storage": "^0.0.1",
     "react-native-calendar-picker": "^6.1.5",
     "react-native-card": "^1.0.0",
@@ -66,11 +66,10 @@
     "react-native-paper": "^5.4.0",
     "react-native-permissions": "^3.7.2",
     "react-native-reanimated": "~2.14.4",
-    "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-tab-view": "^3.5.1",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "^0.18.12",
+    "react-native-web": "~0.18.11",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
     "react-password-checklist": "^1.4.3",
@@ -81,13 +80,13 @@
     "zlib": "^1.0.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.3",
+    "@babel/core": "^7.20.0",
     "@testing-library/jest-native": "^5.4.2",
     "@testing-library/react-native": "^11.5.4",
     "@types/jest": "^29.4.0",
     "cypress": "^12.7.0",
     "detox": "^20.5.0",
-    "jest": "^29.5.0",
+    "jest": "^29.2.1",
     "ts-jest": "^29.0.5"
   },
   "jest": {
