--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "body-parser": "^1.20.1",
     "card": "^2.5.4",
     "cors": "^2.8.5",
+    "date-fns": "^2.29.3",
     "datetimepicker": "^0.1.39",
     "events": "^3.3.0",
     "expo": "^48.0.6",
